--- a/frontend/logs.html
+++ b/frontend/logs.html
@@ -19,6 +19,13 @@
         <main class="flex-1 min-w-0 overflow-x-auto p-6">
             <h1 class="text-2xl font-semibold mb-4 text-indigo-700">Application Logs</h1>
             <p class="mb-4">Review recent log entries to monitor system activity. Filtering by time or keyword helps you trace what happened during a specific event.</p>
+            <div class="mb-4 flex items-center space-x-2">
+                <label class="text-sm">Days to keep/show:
+                    <input type="number" id="log-days" value="30" class="border p-1 w-20 rounded ml-1" data-help="Number of days of log entries to display and retain when pruning">
+                </label>
+                <button id="refresh-logs" class="bg-indigo-600 text-white px-3 py-1 rounded">Refresh</button>
+                <button id="prune-logs" class="bg-red-500 text-white px-3 py-1 rounded">Prune</button>
+            </div>
             <div id="logs-grid" class="mt-4"></div>
         </main>
     </div>
@@ -27,20 +34,35 @@
     <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
     <script src="js/tabulator-tailwind.js"></script>
     <script>
-    fetch('../php_backend/public/logs.php')
-        .then(resp => resp.json())
-        .then(data => {
-            tailwindTabulator('#logs-grid', {
-                data: data,
-                layout: 'fitDataStretch',
-                columns: [
-                    { title: 'Time', field: 'created_at' },
-                    { title: 'Level', field: 'level' },
-                    { title: 'Message', field: 'message' }
-                ]
+    const gridEl = '#logs-grid';
+
+    function loadLogs() {
+        const days = document.getElementById('log-days').value;
+        fetch(`../php_backend/public/logs.php?days=${days}`)
+            .then(resp => resp.json())
+            .then(data => {
+                tailwindTabulator(gridEl, {
+                    data: data,
+                    layout: 'fitDataStretch',
+                    columns: [
+                        { title: 'Time', field: 'created_at' },
+                        { title: 'Level', field: 'level' },
+                        { title: 'Message', field: 'message' }
+                    ]
+                });
             });
-        });
+    }
+
+    document.getElementById('refresh-logs').addEventListener('click', loadLogs);
+    document.getElementById('prune-logs').addEventListener('click', () => {
+        const days = document.getElementById('log-days').value;
+        fetch(`../php_backend/public/logs.php?prune_days=${days}`)
+            .then(() => loadLogs());
+    });
+
+    loadLogs();
     </script>
+    <script src="js/input_help.js"></script>
     <script src="js/overlay.js"></script>
 </body>
 </html>
