--- a/frontend/group_dashboard.html
+++ b/frontend/group_dashboard.html
@@ -42,6 +42,7 @@
     <script src="js/tabulator-tailwind.js"></script>
     <script src="https://code.highcharts.com/highcharts.js"></script>
     <script>
+    const gradientColors = ['#4B0082', '#40826D', '#50C878', '#AAF0D1'];
     // Format totals with currency and highlight positive/negative values
     function totalFormatter(cell){
         const value = cell.getValue();
@@ -120,12 +121,13 @@
     // Create a column chart for the supplied dataset
     function buildChart(id, title, data){
         Highcharts.chart(id, {
+            colors: gradientColors,
             chart: { type: 'column' },
             title: { text: title },
             xAxis: { categories: data.map(d => d.name) },
             yAxis: { title: { text: 'Amount (£)' }, labels: { formatter: function(){ return '£' + Highcharts.numberFormat(this.value,2); } } },
             tooltip: { pointFormatter: function(){ return '£' + Highcharts.numberFormat(this.y,2); } },
-            series: [{ name: 'Total', data: data.map(d => parseFloat(d.total)) }]
+            series: [{ name: 'Total', data: data.map(d => parseFloat(d.total)), colorByPoint: true }]
         });
     }
 
