--- a/frontend/report.html
+++ b/frontend/report.html
@@ -45,6 +45,7 @@
     <script src="https://unpkg.com/tabulator-tables@6.3.0/dist/js/tabulator.min.js"></script>
     <script src="js/tabulator-tailwind.js"></script>
     <script>
+    const gradientColors = ['#4B0082', '#40826D', '#50C878', '#AAF0D1'];
 
     // Load filter options for categories, tags and groups
     async function loadOptions() {
@@ -134,11 +135,12 @@
                     const categories = data.map(tx => tx.date);
                     const amounts = data.map(tx => parseFloat(tx.amount));
                     Highcharts.chart('chart', {
+                        colors: gradientColors,
                         chart: { type: 'column' },
                         title: { text: 'Transaction Amounts' },
                         xAxis: { categories: categories, title: { text: 'Date' } },
                         yAxis: { title: { text: 'Amount' } },
-                        series: [{ name: 'Amount', data: amounts }]
+                        series: [{ name: 'Amount', data: amounts, colorByPoint: true }]
                     });
                 } else {
                     gridEl.innerHTML = 'No transactions found.';
